2009-02-16 mentaer <sstein@geo.uzh.ch>
    Integrated RasterImageLayer from Pirol - this will allow to
    use Sextante with OpenJUMP directly (when Sextante bindings are changed too).
    - added:      
	org.openjump.core.rasterimage,*
    - changed:
    some refactoring of metdata classes (used by rasterimages) into 
    org.openjump.util.metadata.*
    org.openjump.core.apitools.FeatureCollectionTools
    de.fho.jump.pirol.xxx
    
2009-02-16 mentaer <sstein@geo.uzh.ch>
    Integrated Layer Statistics tool from Pirol.
    To be found in /Tools/Analysis/One Layer/Attribute Statistic Overview
    - added:      
	org.openjump.core.ui.plugin.tools.statistics.StatisticOverViewPlugIn.java
	org.openjump.core.apitools.comparisonandsorting.*
	org.openjump.core.apitools.tables.*
	org.openjump.core.attributeoperations.statistics.*
	org.openjump.core.graph.pirolProject.*
	org.openjump.core.ui.plugin.tools.statistics.*
    - changed:
    org.openjump.core.apitools.FeatureCollectionTools (different import)
    de.fho.jump.pirol.utilities.FormulaParsing.Values.AttributeValue (different import)
    
2009-02-15 mentaer <sstein@geo.uzh.ch>
    Added further 1-D Classification methods for ColorTheming.
    Besides using the equal-interval and equal-number methods, 
    class breaks can now be calculated using i) Mean-Standard Deviation,
    ii) maximal breaks, iii) Jenks optimal breaks.
    Note: The equal-number breaks calculation has been replace with one contained
    in Classifier1D to keep consistent with API methods (however, tests show that
    the old and the new method deliver slightly different results)
    - added:      
	org.openjump.core.attributeoperations.Classifier1D.java
	com.vividsolutions.jump.workbench.ui.renderer.style.attributeclassifications.JenksBreaksColorThemingState	
	com.vividsolutions.jump.workbench.ui.renderer.style.attributeclassifications.MaximalBreaksColorThemingState